--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "datatables.net-bs5": "^1.13.1",
+        "datatables.net-buttons-bs5": "^2.3.3",
+        "datatables.net-responsive-bs5": "^2.4.0"
     }
 }
